--- a/hugo.toml
+++ b/hugo.toml
@@ -26,7 +26,7 @@ unsafe = true
 
   [[menu.main]]
     name = "About"
-    url = "/about-me/"
+    url = "/about/"
     weight = 50
 
   [[menu.main]]
