--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,10 @@
 {
   "$schema": "https://openapi.vercel.sh/vercel.json",
   "buildCommand": "chmod a+x build.sh && ./build.sh",
-  "outputDirectory": "public"
+  "outputDirectory": "public",
+  "build": {
+    "env": {
+      "HUGO_VERSION": "0.124.1"
+    }
+  }
 }
