--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,10 @@
 {
   "$schema": "https://openapi.vercel.sh/vercel.json",
-  "buildCommand": "Xin chào Michael nhé" "chmod a+x build.sh && ./build.sh",
+  "buildCommand": "chmod a+x build.sh && ./build.sh",
   "outputDirectory": "public",
   "build": {
     "env": {
-      "HUGO_VERSION": "0.224.1"
+      "HUGO_VERSION": "0.124.1"
     }
   }
 }
